--- a/UserMan.xaml
+++ b/UserMan.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="FinalFinanceTrack.UserMan"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FinalFinanceTrack"
-        mc:Ignorable="d"
-        Title="UserMan" Height="450" Width="800">
-    <Grid>
-        
+        Title="Management" Height="493" Width="800" Loaded="Window_Loaded">
+    <Grid Background="White">
+        <Button x:Name="button1" Content="BACK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Height="39" Margin="12,12,0,0" Click="button1_Click" Background="LightGray" />
+        <TextBox x:Name="textBox1" Text="MANAGE USERS" HorizontalAlignment="Left" VerticalAlignment="Top" Width="169" Height="26" Margin="226,92,0,0" TextChanged="textBox1_TextChanged" />
+        <Button x:Name="UserList" Content="USER LIST" HorizontalAlignment="Left" VerticalAlignment="Top" Width="136" Height="49" Margin="29,139,0,0" Click="button2_Click" Background="Silver" />
+        <Button x:Name="button3" Content="ADD NEW USER" HorizontalAlignment="Left" VerticalAlignment="Top" Width="191" Height="47" Margin="38,257,0,0" Click="button3_Click" Background="Gray" />
+        <Button x:Name="EditUSER_Button" Content="EDIT USER" HorizontalAlignment="Left" VerticalAlignment="Top" Width="191" Height="43" Margin="38,310,0,0" Click="button4_Click" Background="Gray" />
+        <Button x:Name="button_Delete" Content="DELETE" HorizontalAlignment="Left" VerticalAlignment="Top" Width="191" Height="40" Margin="38,365,0,0" Click="button_Delete_Click" Background="Gray" />
     </Grid>
 </Window>
