--- a/CreateUser.xaml
+++ b/CreateUser.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Create User" Height="573" Width="977">
     <Grid Background="White">
-        <Label x:Name="label1" Content="ADD A USER" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="374,18,0,0" FontFamily="Arial Rounded MT Bold" FontSize="16" Background="Silver" />
+        <Label x:Name="label1" Content="ADD A USER" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="374,18,0,0" FontFamily="Stencil" FontSize="18" Background="Silver" />
         <Label x:Name="label2" Content="First Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,108,0,0" />
         <Label x:Name="label3" Content="Last Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,166,0,0" />
         <Label x:Name="label4" Content="Email Address" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,215,0,0" />
