--- a/DeleteUser.xaml
+++ b/DeleteUser.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="DeleteUser" Height="450" Width="800">
     <Grid>
-        <Label x:Name="label1" Content="DELETE A USER" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" FontSize="18" FontWeight="Bold"/>
+        <Label x:Name="label1" Content="DELETE A USER" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" FontSize="18" FontWeight="Bold" FontFamily="Stencil"/>
         <Label x:Name="label2" Content="Enter User Email" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,120,0,0"/>
         <TextBox x:Name="email_textbox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="170,120,0,0" Width="400"/>
         <Button x:Name="Delete_text" Content="DELETE" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="420,180,0,0" Width="100" Click="Delete_text_Click"/>
