--- a/Overview.xaml
+++ b/Overview.xaml
@@ -22,7 +22,7 @@
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="Welcome, [Name]" FontSize="24" FontWeight="Bold" Margin="10"/>
             <TextBlock Text="My Overview" FontSize="18" FontWeight="Bold" Margin="10"/>
-            <Button Name="IncomeButton" Content="Income" Width="200" Margin="10" Click="IncomeButton_Click"/>
+            <Button Name="IncomeButton" Content="Income" Width="200" Margin="10" Click="IncomeButton_Click" FontFamily="Berlin Sans FB"/>
             <Button Name="ExpensesButton" Content="Expenses" Width="200" Margin="10" Click="ExpensesButton_Click"/>
             <Button Name="SavingsButton" Content="Savings" Width="200" Margin="10" Click="SavingsButton_Click"/>
             <Button Name="HistoryButton" Content="History" Width="200" Margin="10" Click="HistoryButton_Click"/>
