--- a/Overview.xaml
+++ b/Overview.xaml
@@ -6,21 +6,26 @@
         xmlns:local="clr-namespace:FinalFinanceTrack"
         mc:Ignorable="d"
         Title="Overview" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FFEDDEF4">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="227*"/>
+            <ColumnDefinition Width="573*"/>
+        </Grid.ColumnDefinitions>
         <!-- Top Bar with Settings Button -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid>
+        <Grid Grid.ColumnSpan="3">
             <Button Name="SettingsButton" Content="⚙" HorizontalAlignment="Right" VerticalAlignment="Top" 
                     Margin="10" Width="40" Height="40" Click="SettingsButton_Click"/>
         </Grid>
 
         <!-- Main Content Area -->
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Welcome, [Name]" FontSize="24" FontWeight="Bold" Margin="10"/>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="2" Margin="57,0,0,0">
+            <TextBlock Text="Welcome, [Name]" FontSize="24" FontWeight="Bold" Margin="10" FontFamily="Stencil"/>
             <TextBlock Text="My Overview" FontSize="18" FontWeight="Bold" Margin="10"/>
             <Button Name="IncomeButton" Content="Income" Width="200" Margin="10" Click="IncomeButton_Click" FontFamily="Berlin Sans FB"/>
             <Button Name="ExpensesButton" Content="Expenses" Width="200" Margin="10" Click="ExpensesButton_Click"/>
