not ALL connections are made, only begin + resources added

--- a/AdminPasswordRequest.xaml
+++ b/AdminPasswordRequest.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FinTrackWpf.AdminPasswordRequest"
+﻿<Window x:Class="FinalFinanceTrack.AdminPasswordRequest"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Admin Panel" Height="450" Width="800">
