--- a/AdminsLogIn.xaml
+++ b/AdminsLogIn.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FinTrackWpf.AdminsLogIn"
+﻿<Window x:Class="FinalFinanceTrack.AdminsLogIn"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AdminsLogIn" Height="500" Width="800">
