--- a/ForgotPassword.xaml
+++ b/ForgotPassword.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FinTrackWpf.ForgotPassword"
+﻿<Window x:Class="FinalFinanceTrack.ForgotPassword"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
