--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="FinTrackWpf.MainWindow"
+﻿<Window x:Class="FinalFinanceTrack.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FinTrackWpf"
+        xmlns:local="clr-namespace:FinalFinanceTrack"
         mc:Ignorable="d"
         Title="Welcome Page" Height="500" Width="800">
     <Grid>
