--- a/SignUp.xaml
+++ b/SignUp.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="FinTrackWpf.SignUp"
+﻿<Window x:Class="FinalFinanceTrack.SignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FinTrackWpf"
+        xmlns:local="clr-namespace:FinalFinanceTrack"
         mc:Ignorable="d"
         Title="SignUp" Height="500" Width="800">
     <Grid>
@@ -21,23 +21,24 @@
 
         <!-- First Name TextBox -->
         <TextBox x:Name="firstNameTextBox" Margin="89,107,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239" 
-                 Text="First Name" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+         Text="First Name" Foreground="Gray" Tag="First Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
 
         <!-- Last Name TextBox -->
         <TextBox x:Name="lastNameTextBox" Margin="89,164,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-                 Text="Last Name" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+         Text="Last Name" Foreground="Gray" Tag="Last Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
 
         <!-- Email TextBox -->
         <TextBox x:Name="emailTextBox" Margin="89,215,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239" 
-                 Text="Email must be ending with @fintrack.com" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" TextChanged="emailTextBox_TextChanged" />
+         Text="Email must be ending with @fintrack.com" Foreground="Gray" Tag="Email must be ending with @fintrack.com" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" TextChanged="emailTextBox_TextChanged" />
 
         <!-- Password TextBox -->
         <TextBox x:Name="passwordTextBox" Margin="89,270,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-                 Text="Password" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+         Text="Password" Foreground="Gray" Tag="Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
 
         <!-- Confirm Password TextBox -->
         <TextBox x:Name="confirmPasswordTextBox" Margin="89,322,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-                 Text="Confirm Password" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+         Text="Confirm Password" Foreground="Gray" Tag="Confirm Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+
 
         <!-- Security Questions Text -->
         <TextBlock Margin="393,110,0,80" HorizontalAlignment="Left" FontSize="14" FontWeight="Normal">
