--- a/ForgotPassword.xaml
+++ b/ForgotPassword.xaml
@@ -41,9 +41,14 @@ Put your email adress in and answer the 3 security questions.
         <!-- Submit Button -->
         <Button Content="Submit" Grid.Row="3" Margin="339,27,0,115" Width="80" Height="30" Click="Submit_Click" HorizontalAlignment="Left"/>
 
-        <!-- Black Arrow Image -->
-        <Image Grid.Row="0" Margin="20" Width="30" Height="30" Source="C:\Users\Galaxy Book\Documents\sem2\insp_lab\black-arrow-left-11375.png" MouseLeftButtonDown="Back_Click" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-
+        <!-- Text-based Back Button -->
+        <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
+        Content="Back" Click="Back_Click"
+        HorizontalAlignment="Left" VerticalAlignment="Top"
+        Background="DarkGray" Foreground="White"
+        FontSize="12" Padding="10,0">
+        </Button>
+        
         <!-- Email TextBox -->
         <TextBox x:Name="emailTextBox" Margin="229,92,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"
          Text="Email" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
