--- a/ForgotPasswordAdmin.xaml
+++ b/ForgotPasswordAdmin.xaml
@@ -27,7 +27,11 @@ Enter your email address below and check your mailbox.
         <!-- Submit Button -->
         <Button Content="Submit" Grid.Row="3" Margin="0,211,0,-69" Width="80" Height="30" Click="Submit_Click" HorizontalAlignment="Center"/>
 
-        <!-- Black Arrow Image -->
-        <Image Grid.Row="0" Margin="20" Width="30" Height="30" Source="C:\Users\Galaxy Book\Documents\sem2\insp_lab\black-arrow-left-11375.png" MouseLeftButtonDown="Back_Click" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    </Grid>
+        <!-- Text-based Back Button -->
+        <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
+        Content="Back" Click="Back_Click"
+        HorizontalAlignment="Left" VerticalAlignment="Top"
+        Background="DarkGray" Foreground="White"
+        FontSize="12" Padding="10,0">
+        </Button>    </Grid>
 </Window>
