--- a/AdminsLogIn.xaml
+++ b/AdminsLogIn.xaml
@@ -3,9 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AdminsLogIn" Height="500" Width="800">
     <Grid>
-        <!-- Black Arrow Image -->
-        <Image Grid.Row="0" Margin="20" Width="30" Height="30" Source="C:\Users\Galaxy Book\Documents\sem2\insp_lab\black-arrow-left-11375.png" MouseLeftButtonDown="Back_Click" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
+        <!-- Text-based Back Button -->
+        <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
+        Content="Back" Click="Back_Click"
+        HorizontalAlignment="Left" VerticalAlignment="Top"
+        Background="DarkGray" Foreground="White"
+        FontSize="12" Padding="10,0">
+        </Button>
         <!-- Email TextBox -->
         <TextBox x:Name="adminEmailTextBox" Margin="0,155,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Width="300" 
          Text="Email" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
