--- a/History.xaml
+++ b/History.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="HISTORY" Height="652" Width="1000">
-    <Grid Background="White">
+    <Grid Background="SeaGreen">
         <Button x:Name="button1" Content="BACK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="99" Height="48" Margin="12,12,0,0" Click="button1_Click" Background="DarkRed" />
         <TextBox x:Name="textBox1" Text="HISTORY" HorizontalAlignment="Left" VerticalAlignment="Top" Width="193" Height="54" Margin="301,53,0,0" FontFamily="Arial Rounded MT Bold" FontSize="20" Background="LightGray" />
         <Button x:Name="button2" Content="Search Bar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="153" Height="38" Margin="614,101,0,0" Click="button2_Click" Background="LightGray" />
