--- a/Overview.xaml
+++ b/Overview.xaml
@@ -25,7 +25,7 @@
 
         <!-- Main Content Area -->
         <StackPanel Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="2" Margin="57,0,0,0">
-            <TextBlock Text="Welcome, [Name]" FontSize="24" FontWeight="Bold" Margin="10" FontFamily="Stencil"/>
+            <TextBlock Text="Welcome" FontSize="24" FontWeight="Bold" Margin="10" FontFamily="Stencil"/>
             <TextBlock Text="My Overview" FontSize="18" FontWeight="Bold" Margin="10"/>
             <Button Name="IncomeButton" Content="Income" Width="200" Margin="10" Click="IncomeButton_Click" FontFamily="Berlin Sans FB"/>
             <Button Name="ExpensesButton" Content="Expenses" Width="200" Margin="10" Click="ExpensesButton_Click"/>
