--- a/UpdatePasswordWindow.xaml
+++ b/UpdatePasswordWindow.xaml
@@ -3,17 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Update Password" Height="400" Width="800">
     <Grid>
-        <Label Content="Old Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0"/>
-        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150,10,0,0" Width="200"/>
+        <TextBlock Text="Old Password:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="oldPasswordBox" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="360"/>
 
-        <Label Content="New Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0"/>
-        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150,50,0,0" Width="200"/>
+        <TextBlock Text="New Password:" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="newPasswordBox" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Width="360"/>
 
-        <Label Content="Confirm Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,90,0,0"/>
-        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="150,90,0,0" Width="200"/>
+        <TextBlock Text="Confirm Password:" HorizontalAlignment="Left" Margin="10,130,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="confirmPasswordBox" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top" Width="360"/>
 
-        <Button Content="OK" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="50,150,0,0" Click="OkButton_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="150,150,0,0" Click="CancelButton_Click"/>
-        <Button Content="Back to Settings" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="250,150,0,0" Click="BackToSettingsButton_Click"/>
+        <Button Content="OK" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="100" Click="OkButton_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="120,200,0,0" VerticalAlignment="Top" Width="100" Click="CancelButton_Click"/>
+        <Button Content="Back to Settings" HorizontalAlignment="Left" Margin="230,200,0,0" VerticalAlignment="Top" Width="140" Click="BackToSettingsButton_Click"/>
     </Grid>
 </Window>
