--- a/LogIn.xaml
+++ b/LogIn.xaml
@@ -1,9 +1,6 @@
 ﻿<Window x:Class="FinalFinanceTrack.LogIn"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
         Title="Log In" Height="500" Width="800">
 
     <Grid>
@@ -16,10 +13,9 @@
             <RowDefinition Height="93*"/>
             <RowDefinition Height="29*"/>
             <RowDefinition Height="214*"/>
-
         </Grid.RowDefinitions>
 
-        <!-- good to see you again text -->
+        <!-- Good to see you again text -->
         <TextBlock Text="Good to see you again" Margin="257,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Grid.Row="5" Height="25" Width="224" RenderTransformOrigin="0.5,0.5">
             <TextBlock.RenderTransform>
                 <TransformGroup>
@@ -32,25 +28,30 @@
         </TextBlock>
         <TextBlock Text="New to FinTrack? " Margin="259,83,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="5"/>
         <TextBlock Margin="356,83,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.985,4.79" Grid.Row="5">
-    <Hyperlink Click="SignUpHyperlink_Click">
-        Sign up!
-    </Hyperlink>
+            <Hyperlink Click="SignUpHyperlink_Click">
+                Sign up!
+            </Hyperlink>
         </TextBlock>
 
         <!-- Email TextBox -->
         <TextBox x:Name="emailTextBox" Grid.Row="7" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="300" 
                  Text="Email" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" Margin="257,0,0,0" />
 
-        <!-- Password TextBox -->
-        <TextBox x:Name="passwordTextBox" Grid.Row="7" Margin="257,47,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="300"
-                 Text="Password" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+        <!-- Password TextBox and PasswordBox -->
+        <Grid Grid.Row="7" Margin="257,47,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBox x:Name="passwordTextBox" Height="30" Width="300"
+                     Text="Password" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" Visibility="Collapsed" />
+            <PasswordBox x:Name="passwordBox" Height="30" Width="300" Visibility="Visible" PasswordChanged="PasswordBox_PasswordChanged" GotFocus="PasswordBox_GotFocus" LostFocus="PasswordBox_LostFocus"/>
+            <TextBlock x:Name="passwordPlaceholder" Text="Password" Foreground="Gray" Margin="5,0,0,0" VerticalAlignment="Center" IsHitTestVisible="False"/>
+            <Button x:Name="togglePasswordVisibilityButton" Content="👁" Width="30" Height="30" HorizontalAlignment="Right" Click="TogglePasswordVisibility_Click"/>
+        </Grid>
 
-        <!-- Text-based Back Button -->
+        <!-- Back Button -->
         <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
-        Content="Back" Click="Back_Click"
-        HorizontalAlignment="Left" VerticalAlignment="Top"
-        Background="DarkGray" Foreground="White"
-        FontSize="12" Padding="10,0">
+                Content="Back" Click="Back_Click"
+                HorizontalAlignment="Left" VerticalAlignment="Top"
+                Background="DarkGray" Foreground="White"
+                FontSize="12" Padding="10,0">
         </Button>
 
         <!-- Forgot Password Link -->
@@ -59,8 +60,6 @@
                 Forgot password?
             </Hyperlink>
         </TextBlock>
-
-
 
         <!-- Log In Button -->
         <Button Content="Log In" Grid.Row="7" Width="80" Height="30" Margin="367,140,0,0" Click="Login_Click" HorizontalAlignment="Left" VerticalAlignment="Top"/>
