--- a/ResetPassw.xaml
+++ b/ResetPassw.xaml
@@ -41,6 +41,6 @@
                  HorizontalAlignment="Center" Margin="0,5,0,0"/>
 
         <!-- Submit Button -->
-        <Button Content="Submit" Grid.Row="8" Width="80" Height="25" HorizontalAlignment="Center" Margin="0,10,0,10"/>
+        <Button Content="Submit" Grid.Row="8" Width="80" Height="25" HorizontalAlignment="Center" Margin="0,10,0,10" Click="SubmitButton_Click"/>
     </Grid>
 </Window>
