--- a/SignUp.xaml
+++ b/SignUp.xaml
@@ -1,10 +1,6 @@
 ﻿<Window x:Class="FinalFinanceTrack.SignUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FinalFinanceTrack"
-        mc:Ignorable="d"
         Title="SignUp" Height="500" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,14 +10,11 @@
 
         <!-- Text-based Back Button -->
         <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
-        Content="Back" Click="Back_Click"
-        HorizontalAlignment="Left" VerticalAlignment="Top"
-        Background="DarkGray" Foreground="White"
-        FontSize="12" Padding="10,0">
+                Content="Back" Click="Back_Click"
+                HorizontalAlignment="Left" VerticalAlignment="Top"
+                Background="DarkGray" Foreground="White"
+                FontSize="12" Padding="10,0">
         </Button>
-
-
-
 
         <!-- Title Text -->
         <TextBlock Margin="89,20,0,262" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Width="354">
@@ -30,14 +23,14 @@
 
         <!-- First Name TextBox -->
         <TextBox x:Name="firstNameTextBox" Margin="89,107,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239" 
-         Text="First Name" Foreground="Gray" Tag="First Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+                 Text="First Name" Foreground="Gray" Tag="First Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
 
         <!-- Last Name TextBox -->
         <TextBox x:Name="lastNameTextBox" Margin="89,164,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-         Text="Last Name" Foreground="Gray" Tag="Last Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+                 Text="Last Name" Foreground="Gray" Tag="Last Name" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
 
         <TextBox x:Name="emailTextBox" Margin="89,215,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239" 
-         Text="Email must be ending with @fintrack.com" Foreground="Gray" Tag="Email must be ending with @fintrack.com" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" TextChanged="emailTextBox_TextChanged">
+                 Text="Email must be ending with @fintrack.com" Foreground="Gray" Tag="Email must be ending with @fintrack.com" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" TextChanged="emailTextBox_TextChanged">
             <TextBox.Style>
                 <Style TargetType="TextBox">
                     <Style.Triggers>
@@ -53,45 +46,49 @@
             </TextBox.Style>
         </TextBox>
 
-        <!-- Password TextBox -->
-        <TextBox x:Name="passwordTextBox" Margin="89,270,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-         Text="Password" Foreground="Gray" Tag="Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+        <!-- Password TextBox and PasswordBox -->
+        <Grid Margin="89,270,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBox x:Name="passwordTextBox" Height="30" Width="239"
+                     Text="Password" Foreground="Gray" Tag="Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" Visibility="Collapsed"/>
+            <PasswordBox x:Name="passwordBox" Height="30" Width="239" Visibility="Visible" PasswordChanged="PasswordBox_PasswordChanged" GotFocus="PasswordBox_GotFocus" LostFocus="PasswordBox_LostFocus"/>
+            <TextBlock x:Name="passwordPlaceholder" Text="Password" Foreground="Gray" Margin="5,0,0,0" VerticalAlignment="Center" IsHitTestVisible="False"/>
+            <Button x:Name="togglePasswordVisibilityButton" Content="👁" Width="30" Height="30" HorizontalAlignment="Right" Click="TogglePasswordVisibility_Click"/>
+        </Grid>
 
-        <!-- Confirm Password TextBox -->
-        <TextBox x:Name="confirmPasswordTextBox" Margin="89,322,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="239"
-         Text="Confirm Password" Foreground="Gray" Tag="Confirm Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
-
+        <!-- Confirm Password TextBox and PasswordBox -->
+        <Grid Margin="89,322,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <TextBox x:Name="confirmPasswordTextBox" Height="30" Width="239"
+                     Text="Confirm Password" Foreground="Gray" Tag="Confirm Password" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" Visibility="Collapsed"/>
+            <PasswordBox x:Name="confirmPasswordBox" Height="30" Width="239" Visibility="Visible" PasswordChanged="ConfirmPasswordBox_PasswordChanged" GotFocus="ConfirmPasswordBox_GotFocus" LostFocus="ConfirmPasswordBox_LostFocus"/>
+            <TextBlock x:Name="confirmPasswordPlaceholder" Text="Confirm Password" Foreground="Gray" Margin="5,0,0,0" VerticalAlignment="Center" IsHitTestVisible="False"/>
+            <Button x:Name="toggleConfirmPasswordVisibilityButton" Content="👁" Width="30" Height="30" HorizontalAlignment="Right" Click="ToggleConfirmPasswordVisibility_Click"/>
+        </Grid>
 
         <!-- Security Questions Text -->
         <TextBlock Margin="393,110,0,80" HorizontalAlignment="Left" FontSize="14" FontWeight="Normal">
-    Answer these 3 security questions. 
-    <Hyperlink Click="ExplanationLink_Click" Foreground="#0078D7" FontSize="12">
-        What are these used for?
-    </Hyperlink>
+            Answer these 3 security questions. 
+            <Hyperlink Click="ExplanationLink_Click" Foreground="#0078D7" FontSize="12">
+                What are these used for?
+            </Hyperlink>
         </TextBlock>
-
-
-
-
 
         <!-- Security Question 1 -->
         <TextBlock Margin="393,140,0,0" HorizontalAlignment="Left" FontSize="12" FontWeight="Normal">
-    1. What is the name of the first foreign country you visited?
+            1. What is the name of the first foreign country you visited?
         </TextBlock>
         <TextBox x:Name="securityQuestion1TextBox" Margin="400,170,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"/>
 
         <!-- Security Question 2 -->
         <TextBlock Margin="393,215,0,0" HorizontalAlignment="Left" FontSize="12" FontWeight="Normal">
-    2. What is the name of the first school you attended?
+            2. What is the name of the first school you attended?
         </TextBlock>
         <TextBox x:Name="securityQuestion2TextBox" Margin="400,245,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"/>
 
         <!-- Security Question 3 -->
         <TextBlock Margin="393,289,0,0" HorizontalAlignment="Left" FontSize="12" FontWeight="Normal">
-    3. What is the name of the hospital where you were born?
+            3. What is the name of the hospital where you were born?
         </TextBlock>
         <TextBox x:Name="securityQuestion3TextBox" Margin="400,322,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"/>
-
 
         <!-- LINKS TERMS AND COND AND PRIVACY -->
         <TextBlock Margin="278,433,0,-413" HorizontalAlignment="Left" Grid.RowSpan="2">
@@ -211,23 +208,19 @@
             </Border>
         </Popup>
 
-
         <!-- Pop-up for Explanation -->
         <Popup Name="explanationPopup" Placement="Center" Width="400" Height="200" IsOpen="False">
             <Border BorderBrush="Black" BorderThickness="1" Background="White">
                 <StackPanel Margin="10">
                     <TextBlock Text="Explanation" FontWeight="Bold" FontSize="16" Margin="0,0,0,10"/>
                     <TextBlock TextWrapping="Wrap">
-                These security questions are used to verify your identity when you forget your password. 
-                They help ensure that only you can reset your password and access your account.
+                        These security questions are used to verify your identity when you forget your password. 
+                        They help ensure that only you can reset your password and access your account.
                     </TextBlock>
                     <!-- Close button -->
                     <Button Content="Close" Width="75" Height="30" HorizontalAlignment="Center" Margin="0,10,0,0" Click="ClosePopup_Click" Tag="{Binding ElementName=explanationPopup}" />
                 </StackPanel>
             </Border>
         </Popup>
-
-
-
     </Grid>
 </Window>
