admin forgot password fixed

--- a/ForgotPasswordAdmin.xaml
+++ b/ForgotPasswordAdmin.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Forgot Password Admin" Height="500" Width="800">
+        Title="Admin Forgot Password" Height="500" Width="800">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -15,17 +15,31 @@
         </Grid.RowDefinitions>
 
         <!-- "Forgot Password? Enter your email address." -->
-        <TextBlock Grid.Row="3" Margin="0,67,0,77" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold">
+        <TextBlock Margin="55,35,0,289" HorizontalAlignment="Left" FontSize="18" FontWeight="Bold">
             Forgot your password? 
-Enter your email address below and check your mailbox.
+Put your email address in and answer the 3 security questions.
         </TextBlock>
 
-        <!-- Email TextBox -->
-        <TextBox x:Name="emailTextBox" Grid.Row="3" Margin="0,142,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Width="300" 
-                 Text="Email Address" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+        <!-- Security Question 1 -->
+        <TextBlock Margin="229,146,164,55" FontSize="12" FontWeight="Normal">
+    1. What is the name of the first foreign country you visited?
+        </TextBlock>
+        <TextBox x:Name="adminSecurityQuestion1TextBox" Margin="229,0,0,0" Height="30" VerticalAlignment="Center" Width="300" HorizontalAlignment="Left"/>
+
+        <!-- Security Question 2 -->
+        <TextBlock Margin="229,225,164,53" FontSize="12" FontWeight="Normal">
+    2. What is the name of the first school you attended?
+        </TextBlock>
+        <TextBox x:Name="adminSecurityQuestion2TextBox" Margin="229,261,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"/>
+
+        <!-- Security Question 3 -->
+        <TextBlock Margin="229,315,164,50" FontSize="12" FontWeight="Normal">
+    3. What is the name of the hospital where you were born?
+        </TextBlock>
+        <TextBox x:Name="adminSecurityQuestion3TextBox" Margin="229,351,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left" Grid.RowSpan="4"/>
 
         <!-- Submit Button -->
-        <Button Content="Submit" Grid.Row="3" Margin="0,211,0,-69" Width="80" Height="30" Click="Submit_Click" HorizontalAlignment="Center"/>
+        <Button Content="Submit" Grid.Row="3" Margin="339,27,0,115" Width="80" Height="30" Click="Submit_Click" HorizontalAlignment="Left"/>
 
         <!-- Text-based Back Button -->
         <Button Grid.Row="0" Margin="10,10,0,0" Width="54" Height="23"
@@ -33,5 +47,11 @@ Enter your email address below and check your mailbox.
         HorizontalAlignment="Left" VerticalAlignment="Top"
         Background="DarkGray" Foreground="White"
         FontSize="12" Padding="10,0">
-        </Button>    </Grid>
+        </Button>
+
+        <!-- Email TextBox -->
+        <TextBox x:Name="adminEmailTextBox" Margin="229,92,0,0" Height="30" VerticalAlignment="Top" Width="300" HorizontalAlignment="Left"
+         Text="Email" Foreground="Gray" GotFocus="RemovePlaceholderText" LostFocus="AddPlaceholderText" />
+
+    </Grid>
 </Window>
