--- a/Overview.xaml
+++ b/Overview.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalFinanceTrack"
         mc:Ignorable="d"
-        Title="Overview" Height="450" Width="800">
+        Title="Overview" Height="500" Width="800">
     <Grid Background="#FFF9F6F4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="227*"/>
             <ColumnDefinition Width="573*"/>
         </Grid.ColumnDefinitions>
-        <!-- Top Bar with Settings Button -->
+        <!-- Top Bar with Settings Button and Profile Picture -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -20,8 +20,12 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.ColumnSpan="3">
-            <Button Name="SettingsButton" Content="⚙" HorizontalAlignment="Right" VerticalAlignment="Top" 
-            Margin="10" Width="40" Height="40" Click="SettingsButton_Click"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">
+                <Border Width="100" Height="100" Background="LightGray" BorderBrush="Black" BorderThickness="2" MouseLeftButtonDown="ProfilePicture_Click" Margin="0,0,10,0">
+                    <Image x:Name="ProfileImage" Stretch="Uniform" ClipToBounds="True"/>
+                </Border>
+                <Button Name="SettingsButton" Content="⚙" Width="40" Height="40" Click="SettingsButton_Click"/>
+            </StackPanel>
         </Grid>
 
         <!-- Title Area -->
@@ -37,10 +41,5 @@
             <Button Name="SavingsButton" Content="Savings" Width="200" Margin="10" Click="SavingsButton_Click" BorderBrush="#FF8314DC" BorderThickness="2"/>
             <Button Name="HistoryButton" Content="History" Width="200" Margin="10" Click="HistoryButton_Click" BorderBrush="#FF8314DC" BorderThickness="2"/>
         </WrapPanel>
-
     </Grid>
-    
-   
 </Window>
-    
-
